--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
-python==3.8.0
-numpy==1.22.4
-pandas==2.0.3
-scikit-learn==1.3.0
-lightgbm==4.3.0
-xgboost==2.0.3
-scipy==1.10.1
 memory-profiler==0.61.0
-torch==1.9.0
-psutil==5.9.0
 
+# Hyperparameter optimization
+optuna==4.3.0
 
+# Machine learning
+joblib>=1.4.2
+lightgbm==4.5.0
+numpy>=1.24.4
+pandas>=1.5.3  
+scikit-learn==1.4.2
+scipy>=1.10.1
+shap>=0.45.0  
+threadpoolctl>=2.2.0
+xgboost==2.0.0
 
-
-
-
+# Deep learning (CUDA 11.8)
+# Requires pre-installed CUDA Toolkit 11.8
+torch==2.2.0+cu118
+torchaudio==2.2.0+cu118
+torchvision==0.17.0+cu118
